--- a/default.css
+++ b/default.css
@@ -2,7 +2,35 @@
     font-family: "Yusei Magic", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+.sour-gummy-regular {
+    font-family: "Sour Gummy", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+
+.mandali-regular {
+    font-family: "Mandali", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}  
+
+.baloo-bhaijaan-2-regular {
+    font-family: "Baloo Bhaijaan 2", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
+
+body {
+    margin-top: 0;
+    margin-bottom: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+}
 
 header {
     background-color: #ffffff;
@@ -14,10 +42,9 @@ header {
 
 header h1 {
     text-align: center;
-}
-
-#logo {
     flex: 1;
+    font-family: "Baloo Bhaijaan 2", sans-serif;
+    font-size: 2em;
 }
 
 header ul {
@@ -32,6 +59,7 @@ header ul {
 header ul li {
     padding: 20px;
     list-style-type: none;
+    font-family: "Baloo Bhaijaan 2", sans-serif;
 }
 
 a {
@@ -64,27 +92,29 @@ a {
     border-radius: 5px;
     background: rgba(0, 0, 0, 0.5);
     color: #fff; 
-    font-size: 2em;
+    font-size: 1.5em;
+    font-family: "Mandali", sans-serif;
 }
 
 #intro-blurb {
-    padding: 20px;
-    width: 75%;
-    border: 2px solid #000000;
+    padding: 10px, 20px, 20px, 20px;
+    width: 85%;
     margin-top: 1em;
-    margin-bottom: 2em;
+    margin-bottom: 4em;
 }
 
 #intro-blurb h1 {
-    font-size: 2.5em;
+    font-family: "Sour Gummy", sans-serif;
+    font-size: 2em;
 }
 
-#intro-blurb p {
-    margin-bottom: 2em;
+#resumebutton {
+    margin-top: 3em;
 }
 
 p {
-    font-size: 1.25em;
+    font-family: "Mandali", sans-serif;
+    font-size: 1em;
 }
 
 #aboutcss main {
@@ -94,7 +124,7 @@ p {
     align-items: center;
     justify-content: center;
     row-gap: 1em;
-    margin: 1em;
+    margin: .5em;
 }
 
 span {
@@ -109,12 +139,21 @@ span {
     border-radius: 15px;
 }
 
+#imgcontainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #contacts {
     text-align: center;
+    margin-top: 2em;
+    margin-bottom: 3em;
 }
 
 #contacts h2 {
     margin: 0;
+    font-family: "Sour Gummy", sans-serif;
 }
 
 #contacts ul {
@@ -137,18 +176,30 @@ span {
     color: black;
 }
 
-#workscss h1, h2, h3, h4 {
-    margin-left: 30px;
+#workscss h1 {
+    text-align: center;
 }
 
-#projects {
+.card {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+.card aside {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#projects, #websites {
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     row-gap: 1.5em;
 }
 
-#projects img {
+#workscss img {
     display: block;
     width: 100%;
     height: auto;
@@ -169,31 +220,61 @@ span {
     display: none;
 }
 
+#slidesbutton-left, #slidesbutton-right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #f3c04d;
+    border: black 1px solid;
+    border-radius: 10px;
+    color: white;
+    font-size: 1.5em;
+    width: 2em;
+    height: 2em;
+    z-index: 1;
+    cursor: pointer;
+}
+
+#slidesbutton-left.hover, #slidesbutton-right.hover {
+    background-color: #624a11;
+}
+
+#slidesbutton-left {
+    left: 0;
+}
+
+#slidesbutton-right {
+    right: 0;
+}
+
 #indicators {
     display: none;
 }
 
-article p {
-    color: black;
-    margin-bottom: 2em;
-}
-
-#projects aside {
-    margin: 2em;
+nav a:hover {
+    background-color: #f3c04d;
+    border: solid black 1px;
+    border-radius: 60px;
+    text-decoration: none; 
 }
 
 a.button {
+    color: black;
+    text-decoration: none;
     background-color: #f3c04d;
     border-radius: 60px;
-    padding: 15px 30px;
+    padding: 15px 40px;
     border: solid black 1px;
+    font-size: 1.5em;
+    font-family: "Yusei Magic", sans-serif;
+    -webkit-text-fill-color: #f7f7f7;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 
-li a:hover {
-    background-color: #f3c04d;
-    border: solid black 1px;
-    border-radius: 60px;
-    text-decoration: none;
+a.button:hover {
+    background-color: #624a11;
+    text-decoration: none; 
 }
 
 .center {
@@ -203,11 +284,25 @@ li a:hover {
     text-align: center;
 }
 
-.textstroke {
+.textstroke-yellow {
     color: #f3c04d;
     -webkit-text-fill-color: #f3c04d;
     -webkit-text-stroke-width: .5px;
     -webkit-text-stroke-color: rgb(0, 0, 0);
+}
+
+.textstroke-lilac {
+    color: #d773a2;
+    -webkit-text-fill-color: #d773a2;
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: #000000;
+}
+
+.textstroke-bluegreen {
+    color: #07bb9c;
+    -webkit-text-fill-color: #07bb9c;
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: #000000;
 }
 
 @media screen and (min-width: 550px) {
@@ -220,6 +315,20 @@ li a:hover {
 }
 
 @media screen and (min-width: 768px) {
+    #imgcontainer {
+        flex-direction: row;
+    }
+    #imgcontainer img {
+        width: 33%;
+    }
+    #projects, #websites {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .card {
+        width: 49%;
+    }
     #graphics {
         margin-top: 1em;
         width: 75%;
@@ -297,8 +406,14 @@ li a:hover {
     #aboutcss p {
         margin: 1em;
     }
-    #finalp {
+    #imgcontainer {
+        grid-area: 4 / 1 / 5 / 4;
+    }
+    #p-grid {
         grid-column: 1/4;
+    }
+    #p2-grid {
+        grid-area: 5 / 1 / 6 / 4;
     }
     #img1 {
         grid-column: 2/4;
@@ -306,6 +421,12 @@ li a:hover {
     }
     #img2 {
         grid-column: 1/3;
+    }
+    #img3 {
+        grid-column: 1/3;
+    }
+    #img4 {
+        grid-column: 3/4;
     }
     #projects article {
         width: 33%;
@@ -332,6 +453,9 @@ li a:hover {
 @media screen and (min-width: 896px) {
     header {
         flex-direction: row;
+    }
+    header h1 {
+        text-align: left;
     }
 }
 
