--- a/default.css
+++ b/default.css
@@ -56,16 +56,25 @@ header ul {
     align-items: center;
 }
 
-header ul li {
+header li {
     padding: 20px;
     list-style-type: none;
     font-family: "Baloo Bhaijaan 2", sans-serif;
 }
 
-a {
+header a {
     padding: 15px;
     color: black;
     text-decoration: none;
+    border: solid transparent 1px;
+    box-sizing: border-box;
+}
+
+nav a:hover {
+    background-color: #f3c04d;
+    border: solid black 1px;
+    border-radius: 60px;
+    text-decoration: none; 
 }
 
 #window {
@@ -127,10 +136,8 @@ p {
     margin: .5em;
 }
 
-span {
-    color: #f3c04d;
-    font-family: "Yusei Magic", sans-serif;
-    font-size: xx-large;
+#aboutcss main p {
+    margin: 2em;
 }
 
 #aboutcss img {
@@ -148,7 +155,7 @@ span {
 #contacts {
     text-align: center;
     margin-top: 2em;
-    margin-bottom: 3em;
+    margin-bottom: 4em;
 }
 
 #contacts h2 {
@@ -251,13 +258,6 @@ span {
     display: none;
 }
 
-nav a:hover {
-    background-color: #f3c04d;
-    border: solid black 1px;
-    border-radius: 60px;
-    text-decoration: none; 
-}
-
 a.button {
     color: black;
     text-decoration: none;
@@ -282,6 +282,12 @@ a.button:hover {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+
+span {
+    color: #f3c04d;
+    font-family: "Yusei Magic", sans-serif;
+    font-size: xx-large;
 }
 
 .textstroke-yellow {
@@ -317,6 +323,7 @@ a.button:hover {
 @media screen and (min-width: 768px) {
     #imgcontainer {
         flex-direction: row;
+        height: 75%;
     }
     #imgcontainer img {
         width: 33%;
@@ -396,7 +403,7 @@ a.button:hover {
     }
     #aboutcss main {
         display: grid;
-        grid-template-columns: 40% 20% 40%;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: auto;
         align-items: center;
         justify-content: center;
@@ -407,16 +414,22 @@ a.button:hover {
         margin: 1em;
     }
     #imgcontainer {
-        grid-area: 4 / 1 / 5 / 4;
+        grid-area: 4 / 1 / 5 / 5;
     }
-    #p-grid {
-        grid-column: 1/4;
+    #p1 {
+        grid-column: 1/3;
     }
-    #p2-grid {
-        grid-area: 5 / 1 / 6 / 4;
+    #p2 {
+        grid-column: 3/5;
+    }
+    #p3 {
+        grid-column: 1/5;
+    }
+    #p4 {
+        grid-area: 5 / 1 / 6 / 5;
     }
     #img1 {
-        grid-column: 2/4;
+        grid-column: 3/5;
         width: 100%;
     }
     #img2 {
@@ -426,7 +439,7 @@ a.button:hover {
         grid-column: 1/3;
     }
     #img4 {
-        grid-column: 3/4;
+        grid-column: 3/5;
     }
     #projects article {
         width: 33%;
